# modbus

./: Cargo.toml
src/: common.rs  crc.rs  errors.rs  lib.rs  serial.rs  tcp.rs
